--- a/fincords/package.json
+++ b/fincords/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@angular/service-worker": "^16.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
